--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -10,10 +10,10 @@
   <body>
     <main>
       <div class="container">
-        <h1 class="main-title">Gallery</h1>
         <a class="back-link" href="./index.html">Go back</a>
+        <ul class="gallery"></ul>
       </div>
     </main>
-    <script tupe="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
