--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="form">
     <main>
       <div class="container">
-        <h1 class="main-title">Form</h1>
         <a class="back-link" href="./index.html">Go back</a>
+        <form class="feedback-form" autocomplete="off">
+          <label class="email">
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label class="message">
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </main>
     <script tupe="module" src="./js/2-form.js"></script>
