--- a/src/2-form.html
+++ b/src/2-form.html
@@ -28,6 +28,6 @@
         </form>
       </div>
     </main>
-    <script tupe="module" src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
